# ratatui-3d

./: Cargo.toml  README.md
crates/ratatui-3d/: Cargo.toml
crates/ratatui-3d/examples/: cornell.rs  dna.rs
crates/ratatui-3d/src/: render_mode.rs
crates/render3d/: Cargo.toml
crates/render3d-node/: Cargo.toml  package.json
crates/render3d-node/src/: lib.rs
crates/render3d/src/: lib.rs
crates/render3d/src/pipeline/: fragment.rs  framebuffer.rs  mod.rs  raytrace.wgsl
crates/render3d/tests/: pipeline_tests.rs
examples/: cube.rs  trex.rs
src/: color.rs  lib.rs  material.rs  mesh.rs  render_mode.rs  scene.rs  viewport.rs
src/loader/: obj.rs
src/pipeline/: mod.rs  rasterize.rs  raytrace.rs  raytrace_gpu.rs  vertex.rs
tests/: pipeline_tests.rs
