[package]
name = "ratatui-3d"
version = "0.1.0"
edition = "2021"
description = "3D software renderer for terminal UIs, built on ratatui"
license = "MIT"

[dependencies]
ratatui = "0.30"
glam = "0.29"
tobj = { version = "4", default-features = false, optional = true }
gltf = { version = "1.4", default-features = false, optional = true, features = ["import", "utils", "names"] }

[dev-dependencies]
crossterm = "0.29"

[features]
default = ["obj", "gltf"]
obj = ["dep:tobj"]
gltf = ["dep:gltf"]

[[example]]
name = "cube"

[[example]]
name = "trex"
required-features = ["gltf"]
