[package]
name = "ratatui-3d"
version = "0.1.0"
edition = "2021"
description = "3D software renderer for terminal UIs, built on ratatui"
license = "MIT"
repository = "https://github.com/limlabs/ratatui-3d"
homepage = "https://github.com/limlabs/ratatui-3d"
keywords = ["ratatui", "3d", "renderer", "terminal", "tui"]
categories = ["command-line-interface", "graphics", "rendering"]
readme = "README.md"
exclude = ["assets/"]

[dependencies]
ratatui = "0.30"
glam = "0.29"
tobj = { version = "4", default-features = false, optional = true }
gltf = { version = "1.4", default-features = false, optional = true, features = ["import", "utils", "names"] }
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
crossterm = "0.29"

[features]
default = ["obj", "gltf", "gpu"]
obj = ["dep:tobj"]
gltf = ["dep:gltf"]
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

[[example]]
name = "cube"

[[example]]
name = "trex"
required-features = ["gltf", "gpu"]

[[example]]
name = "cornell"
required-features = ["gpu"]

[[example]]
name = "dna"
required-features = ["gltf", "gpu"]
